--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.15",
     "@types/react-dom": "^19.1.9",
-    "eslint": "^9.36.0",
+    "eslint": "^8",
     "eslint-config-next": "^15.5.4",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
